# cookiecutter-rust

./: cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  Cargo.toml  README.md
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/src/: lib.rs
