[package]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
edition = "2018"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
description = "{{cookiecutter.short_description}}"
license = "{{cookiecutter.license}}"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}"
rust-version = "1.56"
keywords = []
categories = []

[dependencies]
